# lib.cdp.module_b

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  pyproject.toml
src/: module_b.c  module_b.h
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.c
