[project]
name = "lib-cdp-module-a"
version = "0.1.0"
description = "Hello World Conan Package"
authors = [
    {name = "Tim Carmean",email = "tcarmean@ford.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "conan (>=2.11.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "lib"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
